deploy: 7b08610dce1de43da373709d5853454dc323144f

--- a/print.html
+++ b/print.html
@@ -3,13 +3,13 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>mdBook Quickstart</title>
+        <title>Simple Pali Chanting Guide &amp; Exercises</title>
         <meta name="robots" content="noindex">
 
 
         <!-- Custom HTML head -->
         
-        <meta name="description" content="Demo site for mdBook Quickstart repo">
+        <meta name="description" content="Learn how to read and chant Pali">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="chapter-1.html"><strong aria-hidden="true">1.</strong> Chapter 1</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.</strong> Simple Pali Chanting Guide</a></li><li class="chapter-item expanded "><a href="chapter-1.html"><strong aria-hidden="true">2.</strong> Chapter 1</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -142,7 +142,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">mdBook Quickstart</h1>
+                    <h1 class="menu-title">Simple Pali Chanting Guide &amp; Exercises</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
@@ -174,7 +174,18 @@
 
                 <div id="content" class="content">
                     <main>
-                        
+                        <br>
+<div align="center">
+<p>Alphabet・Parsing・Rhythm・Metres・Style</p></p>
+<br>
+<p>Available on:</p>
+<p><a href="www.palichanting.github.io">www.palichanting.github.io</a></p>
+<br>
+<p>By Cittadhammo Bhikkhu</p>
+<br>
+</div>
+<p align="center"><img src="images/chart1.png" height="500"></p>
+<div style="break-before: page; page-break-before: always;"></div>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
