--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Chapter 1 - mdBook Quickstart</title>
+        <title>Simple Pali Chanting Guide - Simple Pali Chanting Guide &amp; Exercises</title>
 
 
         <!-- Custom HTML head -->
         
-        <meta name="description" content="Demo site for mdBook Quickstart repo">
+        <meta name="description" content="Learn how to read and chant Pali">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="chapter-1.html" class="active"><strong aria-hidden="true">1.</strong> Chapter 1</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html" class="active"><strong aria-hidden="true">1.</strong> Simple Pali Chanting Guide</a></li><li class="chapter-item expanded "><a href="chapter-1.html"><strong aria-hidden="true">2.</strong> Chapter 1</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -141,7 +141,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">mdBook Quickstart</h1>
+                    <h1 class="menu-title">Simple Pali Chanting Guide &amp; Exercises</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
@@ -173,12 +173,26 @@
 
                 <div id="content" class="content">
                     <main>
-                        
+                        <br>
+<div align="center">
+<p>Alphabet・Parsing・Rhythm・Metres・Style</p></p>
+<br>
+<p>Available on:</p>
+<p><a href="www.palichanting.github.io">www.palichanting.github.io</a></p>
+<br>
+<p>By Cittadhammo Bhikkhu</p>
+<br>
+</div>
+<p align="center"><img src="images/chart1.png" height="500"></p>
+
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
 
+                            <a rel="next prefetch" href="chapter-1.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -187,6 +201,9 @@
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
 
+                    <a rel="next prefetch" href="chapter-1.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
             </nav>
 
         </div>
