deploy: 5d2a3e59dbda7815bcae11b20582df04b7e88361

--- a/print.html
+++ b/print.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.</strong> Simple Pali Chanting Guide</a></li><li class="chapter-item expanded "><a href="chapter-1.html"><strong aria-hidden="true">2.</strong> Chapter 1</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.</strong> Simple Pali Chanting Guide</a></li><li class="chapter-item expanded "><a href="alphabet/alphabet.html"><strong aria-hidden="true">2.</strong> Pali Alphabet</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="alphabet/order.html"><strong aria-hidden="true">2.1.</strong> Order</a></li><li class="chapter-item expanded "><a href="alphabet/prononciation.html"><strong aria-hidden="true">2.2.</strong> Prononciation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="alphabet/exercise1.html"><strong aria-hidden="true">2.2.1.</strong> Exercise 1</a></li></ol></li><li class="chapter-item expanded "><a href="alphabet/stoppedSyllable.html"><strong aria-hidden="true">2.3.</strong> Stopped Syllable</a></li></ol></li><li class="chapter-item expanded "><a href="parsing/parsing.html"><strong aria-hidden="true">3.</strong> Parsing</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="rythm/intro.html"><strong aria-hidden="true">3.1.</strong> Intro</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="parsing/exercise2.html"><strong aria-hidden="true">3.1.1.</strong> Exercise 2</a></li><li class="chapter-item expanded "><a href="parsing/exercise3.html"><strong aria-hidden="true">3.1.2.</strong> Exercise 3</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="rythm/rythm.html"><strong aria-hidden="true">4.</strong> Rythm</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="rythm/intro.html"><strong aria-hidden="true">4.1.</strong> Intro</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="rythm/exercise4.html"><strong aria-hidden="true">4.1.1.</strong> Exercise 4</a></li></ol></li><li class="chapter-item expanded "><a href="rythm/stresses.html"><strong aria-hidden="true">4.2.</strong> Stresses</a></li><li class="chapter-item expanded "><a href="rythm/hyphens.html"><strong aria-hidden="true">4.3.</strong> Hyphens</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="rythm/exercise5.html"><strong aria-hidden="true">4.3.1.</strong> Exercise 5</a></li><li class="chapter-item expanded "><a href="rythm/exercise6.html"><strong aria-hidden="true">4.3.2.</strong> Exercise 6</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="meter/meter.html"><strong aria-hidden="true">5.</strong> Pali Meter</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="meter/test.html"><strong aria-hidden="true">5.1.</strong> test</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -184,8 +184,50 @@
 <p>By Cittadhammo Bhikkhu</p>
 <br>
 </div>
-<p align="center"><img src="images/chart1.png" height="500"></p>
-<div style="break-before: page; page-break-before: always;"></div>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="pali-alphabet"><a class="header" href="#pali-alphabet">Pali Alphabet</a></h1>
+<ul>
+<li><a href="alphabet/order.html">Order of the Pali Alphabet</a></li>
+</ul>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="order-of-the-pali-alphabet"><a class="header" href="#order-of-the-pali-alphabet">Order of the Pali Alphabet</a></h1>
+<p align="center"><img src="alphabet/../images/chart1.png" style="min-width:200px; max-width:500px"></p>
+<div class="table-wrapper"><table><thead><tr><th></th><th></th><th></th></tr></thead><tbody>
+<tr><td><strong>1</strong></td><td><strong>Vowels</strong></td><td><strong>Columns</strong>: Labial, Palatal, Guttural</td></tr>
+<tr><td></td><td></td><td><strong>Rows</strong>: Short, Long, Compound (aka: Diphthongs)</td></tr>
+<tr><td><strong>2</strong></td><td><strong>Pure Nasal</strong></td><td>Nasal only</td></tr>
+<tr><td><strong>3</strong></td><td><strong>Consonants</strong></td><td><strong>Columns</strong>: Labial, Dental, Cerebral (aka: Retroflex), Palatal, Guttural</td></tr>
+<tr><td></td><td></td><td><strong>Rows</strong>: Voiced Nasal, Voiced Aspirate, Voiced Stop, Voiceless Aspirate, Voiceless Stop</td></tr>
+<tr><td><strong>4</strong></td><td><strong>Semi-vowels</strong></td><td><strong>Rows</strong>: Approximant, Fricative (aka: Sibilant, Aspirate)**</td></tr>
+</tbody></table>
+</div>
+<p>The western Pali Alphabet has a specific order according to the place it is formed in the head. It is composed into 4 groups:</p>
+<div class="table-wrapper"><table><thead><tr><th></th><th></th><th></th><th></th></tr></thead><tbody>
+<tr><td>a ā i ī u ū e o</td><td>ṁ</td><td>k kh g gh ṅ c ch j jh ñ ṭ ḍ ṭh ḍh ṇ t d th dh n p b ph bh m</td><td>y r ḷ l v s h</td></tr>
+<tr><td>1</td><td>2</td><td>3</td><td>4</td></tr>
+<tr><td>Vowels</td><td>Pure Nasal</td><td>Consonants</td><td>Semi-vowels</td></tr>
+</tbody></table>
+</div>
+<p>Each group of Vowels, Pure Nasal, Consonants and Semi-vowels is represented in the previous chart and is located in a particular location where it resonates in the head.</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="prononciation"><a class="header" href="#prononciation">Prononciation</a></h1>
+<p>Vowels are of two sorts:</p>
+<div class="table-wrapper"><table><thead><tr><th>Short</th><th>Long</th><th>Note: “e” and “o” change to short in syllables ending in consonants (closed syllable)</th></tr></thead><tbody>
+<tr><td>a as in about   i as in hit   u as in put</td><td>ā as in father  ī as in machine  ū as in rule  e as in grey  o as in more</td><td></td></tr>
+</tbody></table>
+</div><div style="break-before: page; page-break-before: always;"></div><h1 id="exercise-1"><a class="header" href="#exercise-1">Exercise 1</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="stopped-syllable"><a class="header" href="#stopped-syllable">Stopped Syllable</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="parsing"><a class="header" href="#parsing">Parsing</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="intro"><a class="header" href="#intro">Intro</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="exercise-2"><a class="header" href="#exercise-2">Exercise 2</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="exercise-3"><a class="header" href="#exercise-3">Exercise 3</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="rythm"><a class="header" href="#rythm">Rythm</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="intro-1"><a class="header" href="#intro-1">Intro</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="exercise-4"><a class="header" href="#exercise-4">Exercise 4</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="stresses"><a class="header" href="#stresses">Stresses</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="hyphens"><a class="header" href="#hyphens">Hyphens</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="exercise-5"><a class="header" href="#exercise-5">Exercise 5</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="exercise-6"><a class="header" href="#exercise-6">Exercise 6</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="pali-meter"><a class="header" href="#pali-meter">Pali Meter</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="test"><a class="header" href="#test">test</a></h1>
+
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
