--- a/alphabet/order.html
+++ b/alphabet/order.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Simple Pali Chanting Guide - Simple Pali Chanting Guide &amp; Exercises</title>
+        <title>Order - Simple Pali Chanting Guide &amp; Exercises</title>
 
 
         <!-- Custom HTML head -->
@@ -12,21 +12,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="icon" href="favicon.svg">
-        <link rel="shortcut icon" href="favicon.png">
-        <link rel="stylesheet" href="css/variables.css">
-        <link rel="stylesheet" href="css/general.css">
-        <link rel="stylesheet" href="css/chrome.css">
-        <link rel="stylesheet" href="css/print.css" media="print">
+        <link rel="icon" href="../favicon.svg">
+        <link rel="shortcut icon" href="../favicon.png">
+        <link rel="stylesheet" href="../css/variables.css">
+        <link rel="stylesheet" href="../css/general.css">
+        <link rel="stylesheet" href="../css/chrome.css">
+        <link rel="stylesheet" href="../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="fonts/fonts.css">
+        <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="highlight.css">
-        <link rel="stylesheet" href="tomorrow-night.css">
-        <link rel="stylesheet" href="ayu-highlight.css">
+        <link rel="stylesheet" href="../highlight.css">
+        <link rel="stylesheet" href="../tomorrow-night.css">
+        <link rel="stylesheet" href="../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
@@ -35,7 +35,7 @@
     <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
-            var path_to_root = "";
+            var path_to_root = "../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html" class="active"><strong aria-hidden="true">1.</strong> Simple Pali Chanting Guide</a></li><li class="chapter-item expanded "><a href="alphabet/alphabet.html"><strong aria-hidden="true">2.</strong> Pali Alphabet</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="alphabet/order.html"><strong aria-hidden="true">2.1.</strong> Order</a></li><li class="chapter-item expanded "><a href="alphabet/prononciation.html"><strong aria-hidden="true">2.2.</strong> Prononciation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="alphabet/exercise1.html"><strong aria-hidden="true">2.2.1.</strong> Exercise 1</a></li></ol></li><li class="chapter-item expanded "><a href="alphabet/stoppedSyllable.html"><strong aria-hidden="true">2.3.</strong> Stopped Syllable</a></li></ol></li><li class="chapter-item expanded "><a href="parsing/parsing.html"><strong aria-hidden="true">3.</strong> Parsing</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="rythm/intro.html"><strong aria-hidden="true">3.1.</strong> Intro</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="parsing/exercise2.html"><strong aria-hidden="true">3.1.1.</strong> Exercise 2</a></li><li class="chapter-item expanded "><a href="parsing/exercise3.html"><strong aria-hidden="true">3.1.2.</strong> Exercise 3</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="rythm/rythm.html"><strong aria-hidden="true">4.</strong> Rythm</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="rythm/intro.html"><strong aria-hidden="true">4.1.</strong> Intro</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="rythm/exercise4.html"><strong aria-hidden="true">4.1.1.</strong> Exercise 4</a></li></ol></li><li class="chapter-item expanded "><a href="rythm/stresses.html"><strong aria-hidden="true">4.2.</strong> Stresses</a></li><li class="chapter-item expanded "><a href="rythm/hyphens.html"><strong aria-hidden="true">4.3.</strong> Hyphens</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="rythm/exercise5.html"><strong aria-hidden="true">4.3.1.</strong> Exercise 5</a></li><li class="chapter-item expanded "><a href="rythm/exercise6.html"><strong aria-hidden="true">4.3.2.</strong> Exercise 6</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="meter/meter.html"><strong aria-hidden="true">5.</strong> Pali Meter</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="meter/test.html"><strong aria-hidden="true">5.1.</strong> test</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../index.html"><strong aria-hidden="true">1.</strong> Simple Pali Chanting Guide</a></li><li class="chapter-item expanded "><a href="../alphabet/alphabet.html"><strong aria-hidden="true">2.</strong> Pali Alphabet</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../alphabet/order.html" class="active"><strong aria-hidden="true">2.1.</strong> Order</a></li><li class="chapter-item expanded "><a href="../alphabet/prononciation.html"><strong aria-hidden="true">2.2.</strong> Prononciation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../alphabet/exercise1.html"><strong aria-hidden="true">2.2.1.</strong> Exercise 1</a></li></ol></li><li class="chapter-item expanded "><a href="../alphabet/stoppedSyllable.html"><strong aria-hidden="true">2.3.</strong> Stopped Syllable</a></li></ol></li><li class="chapter-item expanded "><a href="../parsing/parsing.html"><strong aria-hidden="true">3.</strong> Parsing</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../rythm/intro.html"><strong aria-hidden="true">3.1.</strong> Intro</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../parsing/exercise2.html"><strong aria-hidden="true">3.1.1.</strong> Exercise 2</a></li><li class="chapter-item expanded "><a href="../parsing/exercise3.html"><strong aria-hidden="true">3.1.2.</strong> Exercise 3</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../rythm/rythm.html"><strong aria-hidden="true">4.</strong> Rythm</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../rythm/intro.html"><strong aria-hidden="true">4.1.</strong> Intro</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../rythm/exercise4.html"><strong aria-hidden="true">4.1.1.</strong> Exercise 4</a></li></ol></li><li class="chapter-item expanded "><a href="../rythm/stresses.html"><strong aria-hidden="true">4.2.</strong> Stresses</a></li><li class="chapter-item expanded "><a href="../rythm/hyphens.html"><strong aria-hidden="true">4.3.</strong> Hyphens</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../rythm/exercise5.html"><strong aria-hidden="true">4.3.1.</strong> Exercise 5</a></li><li class="chapter-item expanded "><a href="../rythm/exercise6.html"><strong aria-hidden="true">4.3.2.</strong> Exercise 6</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../meter/meter.html"><strong aria-hidden="true">5.</strong> Pali Meter</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../meter/test.html"><strong aria-hidden="true">5.1.</strong> test</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -144,7 +144,7 @@
                     <h1 class="menu-title">Simple Pali Chanting Guide &amp; Exercises</h1>
 
                     <div class="right-buttons">
-                        <a href="print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
 
@@ -173,23 +173,35 @@
 
                 <div id="content" class="content">
                     <main>
-                        <br>
-<div align="center">
-<p>Alphabet・Parsing・Rhythm・Metres・Style</p></p>
-<br>
-<p>Available on:</p>
-<p><a href="www.palichanting.github.io">www.palichanting.github.io</a></p>
-<br>
-<p>By Cittadhammo Bhikkhu</p>
-<br>
+                        <h1 id="order-of-the-pali-alphabet"><a class="header" href="#order-of-the-pali-alphabet">Order of the Pali Alphabet</a></h1>
+<p align="center"><img src="../images/chart1.png" style="min-width:200px; max-width:500px"></p>
+<div class="table-wrapper"><table><thead><tr><th></th><th></th><th></th></tr></thead><tbody>
+<tr><td><strong>1</strong></td><td><strong>Vowels</strong></td><td><strong>Columns</strong>: Labial, Palatal, Guttural</td></tr>
+<tr><td></td><td></td><td><strong>Rows</strong>: Short, Long, Compound (aka: Diphthongs)</td></tr>
+<tr><td><strong>2</strong></td><td><strong>Pure Nasal</strong></td><td>Nasal only</td></tr>
+<tr><td><strong>3</strong></td><td><strong>Consonants</strong></td><td><strong>Columns</strong>: Labial, Dental, Cerebral (aka: Retroflex), Palatal, Guttural</td></tr>
+<tr><td></td><td></td><td><strong>Rows</strong>: Voiced Nasal, Voiced Aspirate, Voiced Stop, Voiceless Aspirate, Voiceless Stop</td></tr>
+<tr><td><strong>4</strong></td><td><strong>Semi-vowels</strong></td><td><strong>Rows</strong>: Approximant, Fricative (aka: Sibilant, Aspirate)**</td></tr>
+</tbody></table>
 </div>
+<p>The western Pali Alphabet has a specific order according to the place it is formed in the head. It is composed into 4 groups:</p>
+<div class="table-wrapper"><table><thead><tr><th></th><th></th><th></th><th></th></tr></thead><tbody>
+<tr><td>a ā i ī u ū e o</td><td>ṁ</td><td>k kh g gh ṅ c ch j jh ñ ṭ ḍ ṭh ḍh ṇ t d th dh n p b ph bh m</td><td>y r ḷ l v s h</td></tr>
+<tr><td>1</td><td>2</td><td>3</td><td>4</td></tr>
+<tr><td>Vowels</td><td>Pure Nasal</td><td>Consonants</td><td>Semi-vowels</td></tr>
+</tbody></table>
+</div>
+<p>Each group of Vowels, Pure Nasal, Consonants and Semi-vowels is represented in the previous chart and is located in a particular location where it resonates in the head.</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="../alphabet/alphabet.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
-                            <a rel="next prefetch" href="alphabet/alphabet.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../alphabet/prononciation.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -199,8 +211,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="../alphabet/alphabet.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
-                    <a rel="next prefetch" href="alphabet/alphabet.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../alphabet/prononciation.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
@@ -215,13 +230,13 @@
         </script>
 
 
-        <script src="elasticlunr.min.js"></script>
-        <script src="mark.min.js"></script>
-        <script src="searcher.js"></script>
+        <script src="../elasticlunr.min.js"></script>
+        <script src="../mark.min.js"></script>
+        <script src="../searcher.js"></script>
 
-        <script src="clipboard.min.js"></script>
-        <script src="highlight.js"></script>
-        <script src="book.js"></script>
+        <script src="../clipboard.min.js"></script>
+        <script src="../highlight.js"></script>
+        <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
 
