deploy: 2dabab735061afb9f97ad9b7c03d94a65b337f12

--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 
         <!-- Custom HTML head -->
         
-        <meta name="description" content="Learn how to read and chant Pali">
+        <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
